<resources>
    <string name="app_name">Fit-me</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registrarse_text">¿No tienes una cuenta? Registrate</string>
    <string name="registrarse">Registrate</string>
    <string name="iniciar_sesionbtn">Iniciar Sesion</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="Ccontrasena">Confirmar contraseña</string>
    <string name="datos_fisicos">Datos fisicos</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento (dd/mm/yyyy)</string>
    <string name="peso">Peso (En libras)</string>
    <string name="altura">Altura (En metros)</string>
    <string name="registrarme">Registrarme</string>
    <string name="ya_tienes_cuenta">¿Ya tienes una cuenta? Inicia sesion</string>
    <string name="Inicio">Inicio</string>
    <string name="RutinaDiaria">Rutina diaria</string>
    <string name="PublicarRutina">Publicar rutina</string>
    <string name="rutinas_comunidad">Rutinas de comunidad</string>
    <string name="RutinasFavs">Rutinas favoritas</string>
    <string name="Ajustes">Ajustes</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="signout">Cerrar sesion</string>
    <string name="publish_routine_title">Publicacion de rutina</string>
    <string name="publish_routine_description">"¡FitMe es un app basada en su comunidad! \n\n\nDebido a esto todos nuestros ejercicios y rutinas son hechos por los usuarios de nuestro servicio. \n\nTu puedes ayudarnos a hacer crecer la variedad de rutinas para que todos tengamos una mejor experiencia dentro de FitMe."</string>
    <string name="add_rouitine">Agregar nueva rutina</string>
    <string name="insert_routine_description">Ingrese una descripcion corta del la rutina</string>
    <string name="title_publish_routine">Publicación de Rutina</string>
    <string name="title_of_routine">Ingrese el nombre de la nueva rutina</string>
    <string name="routine_duration_hint">Ingrese la duracion de la rutina</string>
    <string name="insert_three_excercises">Ingrese los ejercicios de la rutina:</string>
    <string name="exercise_1_hint">Ingrese el nombre del PRIMER ejercicio</string>
    <string name="description_excercise_hint">Ingrese la descripcion del ejercicio</string>
    <string name="insert_youtube_link_hint">Ingrese link de Youtube del ejercicio</string>
    <string name="exercise_2_hint">Ingrese el nombre del SEGUNDO ejercicio</string>
    <string name="exercise_3_hint">Ingrese el nombre del TERCER ejercicio</string>
    <string name="button_publish_routine_text">Publicar Rutina</string>
    <string name="pass_recovery">Recuperar contraseña</string>
    <string name="forgotpassword">¿Olvidaste la contraseña?</string>
    <string name="recuperar">Recuperar</string>
    <string name="iniciarWish">Volver a iniciar sesion</string>
    <string name="change_pass">Cambiar Contraseña</string>
    <string name="update_info">Actualizar Informacion</string>
    <string name="nombreChange">Nombre:</string>
    <string name="confirm">Confirmar</string>
    <string name="contrasenanueva">Contraseña nueva</string>
    <string name="contrasenanuevaconfirmar">Confirmar contraseña nueva</string>
    <string name="title_rutinas_comunidad">Rutinas de la Comunidad</string>
    <string name="rutinas_comunidad_descripcion">Las rutinas de nuestra app son totalmente hechas por la comunidad de FitMe. \n\nDebido a esto, en este apartado puedes encontrar todas las publicaciones de la comunidad, tambien puedes buscar la que mas te guste para realizarla como rutina diaria.</string>
    <string name="hint_search_routine">Busca aquí tu rutina</string>
    <string name="Comenzar_rutina">Comenzar Rutina de Hoy</string>
    <string name="Texto_Motivacional">Hacer algún tipo de ejercicio físico es una necesidad, ya que brinda bastantes beneficios a nuestra salud. Estos son algunos:\n\n
        1.Nos libran de padecer muchas enfermedades. \n
        2.La actividad física protege nuestra salud mental \n
        3.Nos da una gran sensación de bienestar general \n
        4.Ayudan a dormir mejor \n \n

        Sientete mejor y COMIENZA LA RUTINA DIARIA!

    </string>
    <string name="Ir_Rutina_C">Comenzar Rutina de la Comunidad</string>
    <string name="Finalizar_rutina">Finalizar Rutina</string>
    <string name="titulo">Titulo:</string>
    <string name="usuario">Usuario:</string>
    <string name="Fecha_E">Fecha</string>
    <string name="Hora_E">Hora</string>
    <string name="Notificacion_E">Establecer Notificacion</string>
    <string name="Eliminar_N_E">Eliminar Notificacion</string>
    <string name="Notificacion_Title">Notificaciones</string>
    <string name="excercises_title_preview">Ejercicios</string>
    <string name="button_do_routine">Realizar la rutina</string>
    <string name="welcome_again">¡Bienvenido de nuevo!</string>


</resources>