<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:title="@string/Inicio"
            android:icon="@drawable/ic_home_black_24dp"/>

        <item
            android:id="@+id/nav_rutina_diaria"
            android:title="@string/RutinaDiaria"
            android:icon="@drawable/ic_directions_run_black_24dp"/>

        <item
            android:id="@+id/nav_publicar_rutina"
            android:title="@string/PublicarRutina"
            android:icon="@drawable/ic_public_black_24dp"/>

        <item
            android:id="@+id/nav_rutinas_comunidad"
            android:title="@string/rutinas_comunidad"
            android:icon="@drawable/ic_people_black_24dp"/>

        <item
            android:id="@+id/nav_rutinas_favs"
            android:title="@string/RutinasFavs"
            android:icon="@drawable/ic_star_black_24dp"/>

        <item
            android:id="@+id/NotificacionesFragment"
            android:icon="@drawable/ic_baseline_notifications_active_24"
            android:title="@string/Notificacion_Title" />
        <item
            android:id="@+id/nav_ajustes"
            android:title="@string/Ajustes"
            android:icon="@drawable/ic_settings_black_24dp"/>

        <item
            android:id="@+id/nav_signout"
            android:title="@string/signout"
            android:icon="@drawable/ic_baseline_exit_to_app_24"/>

    </group>
</menu>