<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:id="@+id/NotificacionesFragment">


        <TextView
            android:id="@+id/Titulo_Notificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/Notificacion_Title"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Fecha_text"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="01/01/2000"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/Fecha_button"
            app:layout_constraintEnd_toStartOf="@+id/Fecha_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Fecha_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/boton_rojo"
            android:text="@string/Fecha_E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.826"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Titulo_Notificaciones" />

        <TextView
            android:id="@+id/hora_text"
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="00:00"
            android:textAlignment="center"
            app:layout_constraintBaseline_toBaselineOf="@+id/Hora_button"
            app:layout_constraintEnd_toStartOf="@+id/Hora_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/Hora_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:background="@drawable/boton_rojo"
            android:text="@string/Hora_E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.826"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Fecha_button" />

        <Button
            android:id="@+id/Establecer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="324dp"
            android:background="@drawable/boton_rojo"
            android:text="@string/Notificacion_E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Titulo_Notificaciones" />

        <Button
            android:id="@+id/Eliminar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_rojo"
            android:text="@string/Eliminar_N_E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Establecer_button"
            app:layout_constraintVertical_bias="0.243" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>