<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="ChangeModel"
            type="com.portales.proyecto_apps.principal.ajustes.changepass.ChangePassModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".principal.ajustes.changepass.ChangePassFragment">

        <EditText
            android:id="@+id/txtpassChange"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_input"
            android:ems="10"
            android:gravity="start|center_vertical"
            android:hint="@string/contrasenanueva"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:text="@={ChangeModel.password}"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtpassChangeConfirm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/text_input"
            android:ems="10"
            android:gravity="start|center_vertical"
            android:hint="@string/contrasenanuevaconfirmar"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:text="@={ChangeModel.CPassword}"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtpassChange" />

        <Button
            android:id="@+id/btnConfirmChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/boton_rojo"
            android:text="@string/confirm"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtpassChangeConfirm" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>

